[gd_scene load_steps=15 format=3 uid="uid://hipmkkqcd873"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_bcdrl"]
[ext_resource type="PackedScene" uid="uid://uwuc3yh2dqye" path="res://objects/levels/level_1.tscn" id="1_web6s"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="2_q1b34"]
[ext_resource type="PackedScene" uid="uid://cjmtc4syw0vr6" path="res://objects/levels/level_2.tscn" id="4_lm0e2"]
[ext_resource type="PackedScene" uid="uid://doa7a2dhpmje6" path="res://objects/levels/level_3.tscn" id="5_yx20x"]
[ext_resource type="PackedScene" uid="uid://co3hlji63p1cq" path="res://objects/levels/level_4.tscn" id="6_dbbk6"]
[ext_resource type="PackedScene" uid="uid://cpdr6ux01pdaq" path="res://objects/levels/level_5.tscn" id="7_y6jmw"]
[ext_resource type="PackedScene" uid="uid://be2vnarufcp2o" path="res://objects/levels/level_6.tscn" id="8_agd1j"]
[ext_resource type="PackedScene" uid="uid://cyi72yvqkr8xe" path="res://objects/levels/level_7.tscn" id="9_0mygo"]
[ext_resource type="PackedScene" uid="uid://7du3ycatnd4d" path="res://objects/levels/level_8.tscn" id="10_3wee8"]
[ext_resource type="Script" path="res://destroy_block.gd" id="11_4h8dr"]
[ext_resource type="Texture2D" uid="uid://cgu0o2yx4l63a" path="res://assets/hotbar.png" id="12_lsovk"]
[ext_resource type="Texture2D" uid="uid://bc8g0ogi0blj0" path="res://assets/bolt.png" id="13_gpihe"]
[ext_resource type="Texture2D" uid="uid://t61w3io1fqwo" path="res://assets/storm.png" id="14_fy6vq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bcdrl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(74, 45)
script = ExtResource("2_q1b34")

[node name="Levels" type="Node2D" parent="."]

[node name="Level1" parent="Levels" instance=ExtResource("1_web6s")]
position = Vector2(52, 2)
scale = Vector2(2, 2)

[node name="Level2" parent="Levels" instance=ExtResource("4_lm0e2")]
scale = Vector2(2, 2)

[node name="Level3" parent="Levels" instance=ExtResource("5_yx20x")]
scale = Vector2(2, 2)

[node name="Level4" parent="Levels" instance=ExtResource("6_dbbk6")]
scale = Vector2(2, 2)

[node name="Level5" parent="Levels" instance=ExtResource("7_y6jmw")]
scale = Vector2(2, 2)

[node name="Level6" parent="Levels" instance=ExtResource("8_agd1j")]
scale = Vector2(2, 2)

[node name="Level7" parent="Levels" instance=ExtResource("9_0mygo")]
scale = Vector2(2, 2)

[node name="Level8" parent="Levels" instance=ExtResource("10_3wee8")]
scale = Vector2(2, 2)

[node name="Systems" type="Node" parent="."]

[node name="DestroyBlock" type="Node" parent="Systems"]
script = ExtResource("11_4h8dr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hotbar" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(231, 21)
scale = Vector2(0.5775, 0.42)
texture = ExtResource("12_lsovk")

[node name="bolt" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(24, 21)
scale = Vector2(0.9375, 0.875)
texture = ExtResource("13_gpihe")

[node name="storm" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(51.5, 21)
scale = Vector2(0.90625, 0.875)
texture = ExtResource("14_fy6vq")
